Created base.html file

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -1,14 +1,23 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'inventory/style.css' %}"/>
     <title>Django Delights</title>
 </head>
 <body>
+    <nav class="navbar">
+        <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'menuitems' %}">Menu</a>
+        <a href="{% url 'ingredients' %}">Ingredients</a>
+        <a href="{% url 'purchases' %}">Purchases</a>
+        <a href="{$ url 'finances' $}">Financial</a>
+    </nav>
     {% blockcontent %}
-    
+
     {% endblock %}
 </body>
 </html>
