--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -27,4 +30,18 @@
 table {
     display: flex;
     flex-wrap: wrap;
+    border: 5px solid lightblue;
+    border-radius: 20px;
+    width: fit-content;
+    margin-left: auto; 
+    margin-right: auto;
+    font-size: x-large
+  }
+  th {
+    border: 5px solid lightblue
+  }
+  td {
+    border: 1px solid lightblue;
+    border-radius: 20px;
+    text-align: center;
   }
