created all templats with view configuration

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'inventory/style.css' %}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Django Delights</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
         <a href="{% url 'menuitems' %}">Menu</a>
         <a href="{% url 'ingredients' %}">Ingredients</a>
         <a href="{% url 'purchases' %}">Purchases</a>
+        <a href="{% url 'reciperequirments' %}">Recipe Requirments</a>
         <a href="{% url 'finance' %}">Finances</a>
     </nav>
     <main>
