--- a/inventory/templates/inventory/update_recipe_requirment.html
+++ b/inventory/templates/inventory/update_recipe_requirment.html
@@ -1,5 +1,5 @@
 {% extends 'inventory/base.html' %} {% load static %} {% block content %}
-<h2>Update Menu Item</h2>
+<h2>Update Recipe Requirment</h2>
 <form method="post">
   {% csrf_token %}
   {{ form }}
