--- a/inventory/templates/inventory/add_recipe_requirment.html
+++ b/inventory/templates/inventory/add_recipe_requirment.html
@@ -1,5 +1,5 @@
 {% extends 'inventory/base.html' %} {% load static %} {% block content %}
-<h2>Add a New Purchase to the inventory</h2>
+<h2>Add a New Recipe Requirment to the inventory</h2>
 <form method="post">
   <div>
     {% csrf_token %}
