--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -35,7 +35,7 @@ table {
     width: fit-content;
     margin-left: auto; 
     margin-right: auto;
-    font-size: x-large
+    font-size: x-large;
   }
   th {
     border: 5px solid lightblue
@@ -44,4 +44,9 @@ table {
     border: 1px solid lightblue;
     border-radius: 20px;
     text-align: center;
+    text-decoration: none;
   }
+
+#add_button {
+  max-width: max-content;
+}
