Complete template fixes

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -18,6 +18,7 @@
         <a href="{% url 'purchases' %}">Purchases</a>
         <a href="{% url 'reciperequirments' %}">Recipe Requirments</a>
         <a href="{% url 'finance' %}">Finances</a>
+        <a href="{% url 'logout' %}">Log Out</a>
     </nav>
     <main>
         {% block content %}
