--- a/inventory/templates/inventory/ingredients.html
+++ b/inventory/templates/inventory/ingredients.html
@@ -10,6 +10,7 @@
           <th>Quantity</th>
           <th>Unit</th>
           <th>Unit Price</th>
+          <th>Delete</th>
         </tr>
         {% for ingredient in object_list %}
             <tr>
