--- a/inventory/templates/inventory/menu_items.html
+++ b/inventory/templates/inventory/menu_items.html
@@ -6,6 +6,7 @@
     <tr>
       <th>Menu Item</th>
       <th>Price</th>
+      <th>Delete</th>
     </tr>
     {% for menuitem in object_list %}
         <tr>
