--- a/inventory/templates/inventory/recipe_requirments.html
+++ b/inventory/templates/inventory/recipe_requirments.html
@@ -9,6 +9,7 @@
           <th>Menu Item</th>
           <th>Ingredient</th>
           <th>Quantity</th>
+          <th>Delete</th>
          
         </tr>
         {% for recipe_requirment in object_list %}
